# cpp-playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README-id.md  README.md  include  init-cmake.sh  licensing.py  main.cpp  struct.txt  vcpkg.json
.github/workflows/: cmake.yaml
3D/: CMakeLists.txt
3D/include/: camera.hxx  custom_trait.hxx  debugger.hxx  default.hxx  matrix.hxx  obj3d.hxx  obj_file.hxx  object.hxx  object_3d.hxx  vec.hxx  vertex.hxx
3D/src/: obj_file.cxx  test_3d.cxx
NN/: CMakeLists.txt
NN/FFN/: CMakeLists.txt
NN/FFN/basicFFN/: CMakeLists.txt
NN/FFN/basicFFN/include/: ffn.hxx
NN/FFN/basicFFN/src/: basicFFN.cxx
NN/FFN/dynFFN/: CMakeLists.txt
NN/FFN/dynFFN/include/: ffn.hxx
NN/FFN/dynFFN/src/: dynFFN.cxx
NN/FFN/realFFN/: CMakeLists.txt
NN/FFN/realFFN/include/: ffn.hxx
NN/FFN/realFFN/src/: test_FFN.cxx
NN/Utility/include/: ffn_objects.hxx  nn_handler.hxx  nn_objects.hxx
OpenGL/: CMakeLists.txt  GLwidget.hxx  main.cxx  surface.hxx  util.hxx
basic/: CMakeLists.txt
basic/args_handle/: CMakeLists.txt
basic/args_handle/src/: args_handle.cxx
basic/assertion/: CMakeLists.txt
basic/assertion/include/: assert.hxx
basic/assertion/src/: assert.cxx
basic/endianness/: CMakeLists.txt
basic/endianness/include/: endianness.hxx
basic/endianness/src/: endianness.cxx
basic/module/: CMakeLists.txt  main.cxx  testModule.ixx
basic/move/: CMakeLists.txt
basic/move/include/: move.hxx
basic/move/src/: move.cxx
basic/operator_overloading/: CMakeLists.txt
basic/operator_overloading/include/: op_overload.hxx
basic/operator_overloading/src/: op_overload.cxx
basic/segfault_handler/: CMakeLists.txt
basic/segfault_handler/src/: segfault_handler.cxx
basic/src/: args_handle.cxx
collatz/: CMakeLists.txt
collatz/include/: args_handle.hxx  collatz_cube.hxx  collatz_matrix.hxx  collatz_path.hxx
collatz/src/: collatz.cpp
color/: color.hxx
discrete/: CMakeLists.txt
discrete/include/: bit.hxx  combination.hxx  derangement.hxx  factorial.hxx  fibonacci.hxx  integer_pow.hxx  permutation.hxx  prime.hxx
discrete/src/: derangement.cxx  fibonacci.cxx  prime.cxx
electrical/component/include/: default_electrical_component.hxx
image/PNG/: CMakeLists.txt
image/PNG/include/: png.hxx
image/PNG/src/: pngwriter.cxx  prime-art.cxx
linear/: CMakeLists.txt
linear/include/: matrix.hxx  vec.hxx
microcontroller-sim/: CMakeLists.txt
microcontroller-sim/include/: core.hxx
microcontroller-sim/src/: test_sim.cxx
number_system/: CMakeLists.txt
number_system/include/: big_int.hxx  number_base.hxx  numbers.hxx
number_system/src/: big_int.cxx  fibonacci.cxx  prime.cxx
number_system/test/: big_int.cxx
qt/: CMakeLists.txt  Window.hxx  main.cxx
swb/: CMakeLists.txt
swb/include/: blockchain.hxx  endian.hxx  miner.hxx  peer.hxx  sha3-512.hxx  uint512_t.hxx  wallet.hxx
swb/src/: main.cxx
systems/: CMakeLists.txt
systems/include/: heap.hxx
terminal/: CMakeLists.txt
terminal/include/: ANSI.hxx  display-term.hxx
terminal/src/: collision.cxx  menu.cxx  test-render-video.cxx  test_display.cxx
web-server/: CMakeLists.txt
web-server/include/: TCP.hxx
web-server/src/: client.cxx  main.cxx  server.cxx
win32/: CMakeLists.txt  app.cxx
win32/basic-add_menus/: CMakeLists.txt  app.cxx
win32/basic-create_window/: CMakeLists.txt  app.cxx
